--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,7 @@
+@charset "UTF-8";
+
+@import url(http://fonts.googleapis.com/css?family=Lato:300);
+
 @mixin vertical-align {
 	position: relative;
 	top: 50%;
@@ -11,4 +15,74 @@
 	font-size: ($size / 16px) * 1rem;
 }
 
+*{
+	top: 0;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 
+body{
+	width: 1280px;
+	font-family: "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "游ゴシック", YuGothic, "メイリオ", Meiryo, sans-serif;
+	margin:0 auto;
+}
+
+header{
+	height: 100%;
+	color: white;
+	.bgl{
+		height: 100%;
+		background-color: #000;
+		margin: 0 -100%;
+		padding: 0 100%;
+		z-index: 1;
+	}
+	position: relative;
+	nav{
+		z-index: 5;
+		position: absolute;
+		top: 30px;
+		padding-left: 20px;
+		padding-right: 20px;
+		width: 100%;
+		height: 35px;
+		img{
+			height: 100%;
+			float: left;
+		}
+		ul{
+			list-style-type: none;
+			right: 20px;
+			position: absolute;
+			height: 100%;
+			float: right;
+			li{
+				font-size: 20px;
+				float: left;
+				margin-left: 40px;
+			}
+		}
+	}
+	p{
+		text-align: center;
+		font:{
+			size: 72px;
+			family: "Times New Roman", "游明朝", YuMincho, "Hiragino Mincho ProN", Meiryo, serif;
+		}
+		@include vertical-align;
+	}
+	.more{
+		margin:100px auto;
+		width: 250px;
+		height: 75px;
+		border: solid 1px white;
+		text-align: center;
+		line-height: 75px;
+		font:{
+			size:36px;
+			family: 'Lato', sans-serif;
+		}
+		@include vertical-align;
+	}
+}
