--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,79 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:300);
-body { width: 960px; margin-right: auto; margin-left: auto; font-family: 'Roboto', sans-serif; }
+@charset "UTF-8";
+@import url(http://fonts.googleapis.com/css?family=Lato:300);
+* {
+  top: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-.choices { padding: 25; boader: solid 2px #aca89a; box-sizing: border-box; margin: auto; position: relative; top: 50%; -webkit-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%); }
+body {
+  width: 1280px;
+  font-family: "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "游ゴシック", YuGothic, "メイリオ", Meiryo, sans-serif;
+  margin: 0 auto;
+}
 
-.lo { width: 450px; height: 100px; }
+header {
+  height: 100%;
+  color: white;
+  position: relative;
+}
+header .bgl {
+  height: 100%;
+  background-color: #000;
+  margin: 0 -100%;
+  padding: 0 100%;
+  z-index: 1;
+}
+header nav {
+  z-index: 5;
+  position: absolute;
+  top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 100%;
+  height: 35px;
+}
+header nav img {
+  height: 100%;
+  float: left;
+}
+header nav ul {
+  list-style-type: none;
+  right: 20px;
+  position: absolute;
+  height: 100%;
+  float: right;
+}
+header nav ul li {
+  font-size: 20px;
+  float: left;
+  margin-left: 40px;
+}
+header p {
+  text-align: center;
+  font-size: 72px;
+  font-family: "Times New Roman", "游明朝", YuMincho, "Hiragino Mincho ProN", Meiryo, serif;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+header .more {
+  margin: 100px auto;
+  width: 250px;
+  height: 75px;
+  border: solid 1px white;
+  text-align: center;
+  line-height: 75px;
+  font-size: 36px;
+  font-family: 'Lato', sans-serif;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
 
-p { margin-right: auto; margin-left: auto; }
-
-#name { width: 210px; float: left; padding-right: 50px; padding-left: 50px; text-align: right; font-size: 16px; font-size: 1rem; position: relative; top: 50%; -webkit-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%); }
-
-#menu { height: 250px; width: 600px; float: right; padding-right: 25px; padding-left: 25px; border-left: solid 1px; position: relative; top: 50%; -webkit-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%); }
+/*# sourceMappingURL=style.css.map */
