--- a/css/style.scss
+++ b/css/style.scss
@@ -96,7 +96,40 @@ header{
 		@include vertical-align;
 	}
 }
+#services{
+}
+.center{
 
+}
 .b{
-	border-bottom: solid 1px #BBB;
+	text-align: center;
+	border-bottom: solid 1px #333333;
+	height: 450px;
+	color: #333333;
+	width:(290+50*2)*3;
+	margin: 50 auto 0 auto; 
+	h1{
+		margin: 50px auto;
+		font:{
+			size:48px;
+		}
+	}
+	.service{
+		text-align: center;
+		width: 290px;
+		float: left;
+		margin: 0 50px;
+		object{
+			width: 50%;
+			margin-bottom: 30px;
+		}
+		h3{
+			font-weight: 200;
+		}
+		p{
+			font:{
+				size: 14px;
+			}
+		}
+	}
 }
