--- a/css/style.scss
+++ b/css/style.scss
@@ -97,22 +97,23 @@ header{
 	}
 }
 #services{
+	height: 500px;
+	width:(290+50*2)*3;
 }
-.center{
-
+#works{
+	height: 500px;
+	width: 20*3 + 398*3;
 }
 .b{
-	text-align: center;
 	border-bottom: solid 1px #333333;
-	height: 450px;
 	color: #333333;
-	width:(290+50*2)*3;
-	margin: 50 auto 0 auto; 
+	margin: 50 auto 0 auto;
 	h1{
 		margin: 50px auto;
 		font:{
 			size:48px;
 		}
+		text-align: center;
 	}
 	.service{
 		text-align: center;
@@ -129,6 +130,25 @@ header{
 		p{
 			font:{
 				size: 14px;
+			}
+			text-align: justify;
+		}
+	}
+	.work{
+		background-color: #000;
+		margin: 0 10px;
+		float: left;
+		width: 398px;
+		height: 288px;
+		img{
+			width: 100%;
+			height: 100%;
+			opacity: 1;
+			transition: 0.5s;
+		}
+		&:hover{
+			img{
+				opacity: 0.5;
 			}
 		}
 	}
