--- a/css/style.scss
+++ b/css/style.scss
@@ -36,7 +36,7 @@ body{
 	width: 1280px;
 	font-family: "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "游ゴシック", YuGothic, "メイリオ", Meiryo, sans-serif;
 	margin:0 auto;
-	position: relative;
+	//position: relative;
 }
 
 header{
@@ -117,11 +117,9 @@ header{
 	ul{
 		list-style-type: none;
 		//position: absolute;
-		margin-right: 40px;
-		margin-left: auto;
 		width: 600px;
 		height: 100%;
-		text-align: right;
+		float: right;
 		li{
 			font-size: 20px;
 			float: left;
@@ -190,7 +188,6 @@ header{
 			position: absolute;
 		}
 		p{
-			height: 100%;
 			width: 100%;
 			text-align: center;
 			z-index: 50;
@@ -225,8 +222,12 @@ header{
 			opacity: 1;
 			margin-top: 0;
 			line-height: 288px;
+			font-size: 25px
 		}
 		&:hover{
+			img{
+				opacity: 0.8;
+			}
 			p{
 				opacity: 0.5;
 			}
@@ -236,12 +237,12 @@ header{
 
 .sep{
 	@media screen and (min-width: 1280px){
-		margin: 0 -100%;
-		padding: 0 100%;
+		margin: 0 -500%;
+		padding: 0 500%;
 	}
 	clear: both;
-	//position: absolute;
-	width: 100%;
+	position: relative;
+	width: 200%;
 	border-bottom: 1px solid #333;
 }
 
