--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ header {
   height: 100%;
   color: white;
   clear: both;
+  position: static;
   position: relative;
 }
 header .bgl {
@@ -39,6 +40,12 @@ header .bgl {
     margin: 0 -100%;
     padding: 0 100%;
   }
+}
+header video {
+  opacity: 0.7;
+  height: 100%;
+  z-index: 3;
+  position: absolute;
 }
 header nav {
   z-index: 5;
@@ -67,6 +74,7 @@ header nav ul li {
 }
 header p {
   text-align: center;
+  z-index: 5;
   font-size: 72px;
   font-family: "Times New Roman", "游明朝", YuMincho, "Hiragino Mincho ProN", Meiryo, serif;
   position: relative;
@@ -82,6 +90,7 @@ header #more {
   border: solid 1px white;
   text-align: center;
   line-height: 75px;
+  z-index: 5;
   font-size: 36px;
   font-family: 'Lato', sans-serif;
   position: relative;
@@ -92,6 +101,7 @@ header #more {
 }
 
 #nav {
+  display: none;
   z-index: 99;
   position: fixed;
   top: 0px;
