--- a/css/style.scss
+++ b/css/style.scss
@@ -43,6 +43,7 @@ header{
 	height: 100%;
 	color: white;
 	clear: both;
+	position: static;
 	.bgl{
 		height: 100%;
 		background-color: #000;
@@ -51,6 +52,12 @@ header{
 			padding: 0 100%;
 		}
 		z-index: 1;
+	}
+	video{
+		opacity: 0.7;
+		height: 100%;
+		z-index: 3;
+		position: absolute;
 	}
 	position: relative;
 	nav{
@@ -80,6 +87,7 @@ header{
 	}
 	p{
 		text-align: center;
+		z-index: 5;
 		font:{
 			size: 72px;
 			family: "Times New Roman", "游明朝", YuMincho, "Hiragino Mincho ProN", Meiryo, serif;
@@ -93,6 +101,7 @@ header{
 		border: solid 1px white;
 		text-align: center;
 		line-height: 75px;
+		z-index: 5;
 		font:{
 			size:36px;
 			family: 'Lato', sans-serif;
@@ -102,6 +111,7 @@ header{
 }
 
 #nav{
+	display: none;
 	z-index: 99;
 	position: fixed;
 	top: 0px;
