--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,6 @@ header video {
   z-index: 1;
   position: absolute;
   left: 0;
-  top: 0;
   min-width: 100%;
   min-height: 100%;
   top: 50%;
@@ -158,12 +157,17 @@ header #more {
   width: 1254;
   margin-top: 0;
   padding-top: 50px;
-  margin: 0 -100% 50px -100%;
-  padding: 50 100% 0 100%;
+  padding: 50px 0;
   background-color: #fff;
 }
 #works h1 {
   margin-top: 0;
+}
+@media screen and (min-width: 1280px) {
+  #works {
+    padding: 50px 100%;
+    margin: auto -100%;
+  }
 }
 
 .b {
