--- a/css/style.scss
+++ b/css/style.scss
@@ -70,7 +70,7 @@ header{
 			box-sizing: content-box;
 		}
 		left: 0;
-		top: 0;
+		//width: 100%;
 		@include whmax(100%,100%);
 	}
 	nav{
@@ -170,11 +170,12 @@ header{
 	h1{
 		margin-top: 0;
 	}
-	margin: 0 -100% 50px -100%;
-	padding: 50 100% 0 100%;
-	//box-sizing: content-box;
+	padding: 50px 0;
 	background-color: #fff;
-
+	@media screen and (min-width: 1280px){
+		padding: 50px 100%;
+		margin: auto -100%;
+	}
 }
 
 .b{
