--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,11 @@ header nav ul li {
   font-size: 20px;
   float: left;
   margin-left: 40px;
+  padding: 0 3px;
+  transition: .1s;
+}
+header nav ul li:hover {
+  border-bottom: solid 1px #eee;
 }
 header p {
   text-align: center;
@@ -94,21 +99,34 @@ header p {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-header #more {
-  margin: 100px auto;
-  width: 250px;
-  height: 75px;
-  border: solid 1px white;
-  text-align: center;
-  line-height: 75px;
-  z-index: 5;
-  font-size: 36px;
-  font-family: 'Lato', sans-serif;
+header a {
+  color: #fff;
+}
+header #button {
+  position: relative;
   position: relative;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
+  z-index: 5;
+  margin: 100px auto;
+  width: 250px;
+  height: 75px;
+  display: block;
+  border: solid 1px white;
+  transition: .1s;
+}
+header #button:hover {
+  background: #fff;
+  color: #555;
+  border-radius: 8px;
+}
+header #more {
+  text-align: center;
+  line-height: 75px;
+  font-size: 36px;
+  font-family: 'Lato', sans-serif;
 }
 
 #nav {
@@ -118,7 +136,7 @@ header #more {
   top: 0px;
   width: 100%;
   height: 60px;
-  border-bottom: 1px solid #333333;
+  border-bottom: 1px dotted #666;
   background-color: #fff;
 }
 #nav object {
@@ -129,14 +147,22 @@ header #more {
 }
 #nav ul {
   list-style-type: none;
-  line-height: 60px;
   float: right;
   margin-right: 20px;
+  margin-top: 15px;
 }
 #nav ul li {
   font-size: 20px;
   float: left;
   margin-left: 40px;
+  padding: 0 3px;
+  transition: .1s;
+}
+#nav ul li:hover {
+  border-bottom: solid 1px #333;
+}
+#nav a {
+  color: #333;
 }
 @media screen and (min-width: 1280px) {
   #nav {
@@ -147,12 +173,8 @@ header #more {
   }
 }
 
-#services {
-  height: 500px;
-  width: 1170;
-}
-
-#works {
+#Works {
+  text-align: left;
   height: 500px;
   width: 1254;
   margin-top: 0;
@@ -160,14 +182,48 @@ header #more {
   padding: 50px 0;
   background-color: #fff;
 }
-#works h1 {
+#Works h1 {
   margin-top: 0;
 }
 @media screen and (min-width: 1280px) {
-  #works {
+  #Works {
     padding: 50px 100%;
     margin: auto -100%;
   }
+}
+
+#a {
+  height: 500px;
+}
+#a .left_c {
+  float: left;
+  text-align: left;
+  width: 600px;
+}
+#a .left_c h3 {
+  font-size: 36px;
+}
+#a .left_c #self_intro p {
+  margin-bottom: 40px;
+}
+#a .right_c {
+  float: right;
+  text-align: left;
+  margin-bottom: 10px;
+  width: 600px;
+}
+#a .right_c .english {
+  font-size: 12px;
+}
+#a .right_c .member {
+  width: 120px;
+  margin-bottom: 10px;
+  float: left;
+}
+
+#c .mail {
+  margin: 200px auto;
+  font-size: 48px;
 }
 
 .b {
@@ -265,6 +321,10 @@ header #more {
     margin: 0 -500%;
     padding: 0 500%;
   }
+}
+
+.hide {
+  display: none;
 }
 
 footer {
