--- a/css/style.scss
+++ b/css/style.scss
@@ -143,7 +143,7 @@ header{
 
 #nav{
 	display: none;
-	z-index: 99;
+	z-index: 50;
 	position: fixed;
 	top: 0px;
 	width: 100%;
@@ -152,9 +152,10 @@ header{
 	background-color: #fff;
 	object{
 		height: 35px;
-		float: left;
+		//float: left;
 		margin-top: (60-35)/2;
 		margin-left: 20px;
+			position: relative;
 	}
 	ul{
 		list-style-type: none;
@@ -182,6 +183,9 @@ header{
 		padding: 0 100%;
 		box-sizing: content-box;
 	}
+}
+.d{
+	display: block !important;
 }
 
 #Works{
@@ -346,9 +350,13 @@ header{
 	display: none;
 }
 
+.blank60{
+	height: 60px;
+}
+
 footer{
 	z-index: 5;
-	position: relative;
+	//position: relative;
 	p{
 		text-align: center;
 		@include vertical-align;
