--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,16 @@ header #more {
   margin-top: 12.5;
   margin-left: 20px;
   position: relative;
+  float: left;
+}
+#nav p {
+  position: relative;
+  float: left;
+  line-height: 60px;
+  padding-top: 4px;
+  padding-left: 20px;
+  color: #003D56;
+  font-size: 18px;
 }
 #nav ul {
   list-style-type: none;
@@ -178,11 +188,12 @@ header #more {
 }
 
 #Works {
+  /*Works*/
   text-align: left;
-  height: 500px;
   width: 1254;
   margin-top: 0;
   padding-top: 50px;
+  padding-bottom: 100px;
   padding: 50px 0;
   background-color: #fff;
 }
@@ -191,12 +202,18 @@ header #more {
 }
 @media screen and (min-width: 1280px) {
   #Works {
-    padding: 50px 100%;
+    padding: 50px 100% 100px 100%;
     margin: auto -100%;
   }
 }
+#Works:after {
+  content: "";
+  clear: both;
+  display: block;
+}
 
 #a {
+  /*About*/
   height: 500px;
 }
 #a .left_c {
@@ -206,14 +223,15 @@ header #more {
 }
 #a .left_c h3 {
   font-size: 36px;
+  margin-bottom: 20px;
 }
 #a .left_c #self_intro p {
-  margin-bottom: 40px;
+  margin-top: 30px;
 }
 #a .right_c {
   float: right;
   text-align: left;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   width: 600px;
 }
 #a .right_c .english {
@@ -225,6 +243,9 @@ header #more {
   float: left;
 }
 
+#c {
+  /*Contacts*/
+}
 #c .mail {
   margin: 200px auto;
   font-size: 48px;
@@ -271,12 +292,12 @@ header #more {
   z-index: 3;
 }
 .b .work img {
-  width: 398px;
   height: 288px;
   opacity: 1;
   transition: 0.5s;
   z-index: 5;
   position: absolute;
+  left: -56px;
 }
 .b .work p {
   width: 100%;
@@ -300,7 +321,7 @@ header #more {
   opacity: 1;
 }
 .b .comming {
-  background-color: #fff;
+  background-color: #ddd;
 }
 .b .comming img {
   opacity: 0.3;
@@ -311,6 +332,52 @@ header #more {
   margin-top: 0;
   line-height: 288px;
   font-size: 25px;
+}
+
+.m_main {
+  margin-top: 50px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  height: 380px;
+}
+.m_main .video {
+  width: 580px;
+  height: 327px;
+  background-color: #DDD;
+}
+.m_main .video video {
+  width: 580px;
+}
+.m_main .cs {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  text-align: center;
+}
+.m_main .info {
+  width: 580px;
+}
+.m_main .info .m_theme {
+  font-size: 24px;
+}
+
+.point {
+  margin-bottom: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  height: 215px;
+}
+.point .pic {
+  width: 580px;
+}
+.point .pic img {
+  width: 285px;
+}
+.point .exp {
+  width: 580px;
 }
 
 .sep {
@@ -329,6 +396,14 @@ header #more {
 
 .hide {
   display: none;
+}
+
+.l {
+  float: left;
+}
+
+.r {
+  float: right;
 }
 
 .blank60 {
