comp not only smartphone

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ header {
   height: 100%;
   color: white;
   clear: both;
+  width: 1280px;
 }
 header .bgl {
   height: 100%;
@@ -115,12 +116,13 @@ header #button {
   height: 75px;
   display: block;
   border: solid 1px white;
+  opacity: 1;
   transition: .1s;
 }
 header #button:hover {
   background: #fff;
   color: #555;
-  border-radius: 8px;
+  opacity: 0.8;
 }
 header #more {
   text-align: center;
@@ -139,7 +141,11 @@ header #more {
   border-bottom: 1px dotted #666;
   background-color: #fff;
 }
-#nav object {
+#nav .totop {
+  height: 60px !important;
+  width: 200px !important;
+}
+#nav img {
   height: 35px;
   margin-top: 12.5;
   margin-left: 20px;
@@ -191,10 +197,10 @@ header #more {
   /*Works*/
   text-align: left;
   width: 1254;
-  margin-top: 0;
-  padding-top: 50px;
+  margin-top: -60px;
+  padding-top: 110px;
   padding-bottom: 100px;
-  padding: 50px 0;
+  padding-bottom: 50px;
   background-color: #fff;
 }
 #Works h1 {
@@ -202,8 +208,8 @@ header #more {
 }
 @media screen and (min-width: 1280px) {
   #Works {
-    padding: 50px 100% 100px 100%;
-    margin: auto -100%;
+    padding: 110px 100% 100px 100%;
+    margin: -60px -100% auto -100%;
   }
 }
 #Works:after {
@@ -220,6 +226,7 @@ header #more {
   float: left;
   text-align: left;
   width: 600px;
+  margin-left: 20px;
 }
 #a .left_c h3 {
   font-size: 36px;
@@ -232,6 +239,7 @@ header #more {
   float: right;
   text-align: left;
   margin-bottom: 30px;
+  margin-right: 20px;
   width: 600px;
 }
 #a .right_c .english {
@@ -255,7 +263,8 @@ header #more {
   z-index: 2;
   color: #333333;
   background-color: #fff;
-  margin: 50 auto 0 auto;
+  margin: -10px auto 100px auto;
+  padding-top: 60px;
   box-sizing: content-box;
   position: relative;
 }
@@ -325,6 +334,14 @@ header #more {
 }
 .b .comming img {
   opacity: 0.3;
+  width: 398px;
+  height: auto;
+  left: 0;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 .b .comming p {
   color: #000;
@@ -385,7 +402,7 @@ header #more {
   position: relative;
   width: 100%;
   border-bottom: 1px solid #333;
-  z-index: 2;
+  z-index: 40;
 }
 @media screen and (min-width: 1280px) {
   .sep {
