--- a/css/style.scss
+++ b/css/style.scss
@@ -51,8 +51,10 @@ header{
 	height: 100%;
 	color: white;
 	clear: both;
+	width: 1280px;
 	.bgl{
 		height: 100%;
+		//width: 1280px;
 		background-color: #000;
 		@media screen and (min-width: 1280px){
 			margin: 0 -100%;
@@ -124,11 +126,12 @@ header{
 		height: 75px;
 		display: block;
 		border: solid 1px white;
+		opacity: 1;
 		transition: .1s;
 		&:hover{
 			background:#fff;
 			color: #555;
-			border-radius: 8px;
+			opacity: 0.8;
 		}
 	}
 	#more{
@@ -150,9 +153,13 @@ header{
 	height: 60px;
 	border-bottom: 1px dotted #666;
 	background-color: #fff;
-	object{
+	.totop{
+		height: 60px !important;
+		width: 200px !important;
+
+	}
+	img{
 		height: 35px;
-		//float: left;
 		margin-top: (60-35)/2;
 		margin-left: 20px;
 		position: relative;
@@ -202,17 +209,17 @@ header{
 	text-align: left;
 	//height: 500px;
 	width: 20*3 + 398*3;
-	margin-top: 0;
-	padding-top: 50px;
+	margin-top: -60px;
+	padding-top: 110px;
 	padding-bottom: 100px;
 	h1{
 		margin-top: 0;
 	}
-	padding: 50px 0;
+	padding-bottom: 50px;
 	background-color: #fff;
 	@media screen and (min-width: 1280px){
-		padding: 50px 100% 100px 100%;
-		margin: auto -100%;
+		padding: 110px 100% 100px 100%;
+		margin: -60px -100% auto -100%;
 	}
 	&:after{
 		content: "";
@@ -227,6 +234,7 @@ header{
 		float: left;
 		text-align: left;
 		width: 600px;
+		margin-left: 20px;
 		h3{
 			font-size: 36px;
 			margin-bottom: 20px;
@@ -241,6 +249,7 @@ header{
 		float: right;
 		text-align: left;
 		margin-bottom: 30px;
+		margin-right: 20px;
 		width: 600px;
 		.english{
 			font-size: 12px;
@@ -264,7 +273,8 @@ header{
 	z-index: 2;
 	color: #333333;
 	background-color: #fff;
-	margin: 50 auto 0 auto;
+	margin: -10px auto 100px auto;
+	padding-top: 60px;
 	box-sizing: content-box;
 	position: relative;
 	
@@ -340,6 +350,10 @@ header{
 		background-color: #ddd;
 		img{
 			opacity: 0.3;
+			width: 398px;
+			height: auto;
+			left: 0;
+			@include vertical-align;
 		}
 		p{
 			color: #000;
@@ -404,7 +418,7 @@ header{
 	position: relative;
 	width: 100%;
 	border-bottom: 1px solid #333;
-	z-index: 2;
+	z-index: 40;
 }
 
 .hide{
