--- a/css/style.scss
+++ b/css/style.scss
@@ -66,14 +66,16 @@ header{
 		opacity: 0.7;
 		z-index: 1;
 		position: absolute;
+		left: 0;
+		@include whmax(100%,100%);
 		@media screen and (min-width: 1280px){
 			margin: 0 -100%;
 			padding: 0 100%;
 			box-sizing: content-box;
 		}
-		left: 0;
-		//width: 100%;
-		@include whmax(100%,100%);
+		@media screen and (max-width: 1279px){
+			width: 1280px;
+		}
 	}
 	nav{
 		z-index: 5;
