--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/css?family=Lato:300);
+/* line 27, style.scss */
 * {
   top: 0;
   margin: 0;
@@ -7,39 +8,50 @@
   box-sizing: border-box;
 }
 
+/* line 34, style.scss */
 a {
   text-decoration: none;
 }
 
 @media screen and (min-width: 1280px) {
+  /* line 38, style.scss */
   html {
     overflow-x: hidden;
   }
 }
 
+/* line 44, style.scss */
 body {
   width: 1280px;
   font-family: "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "游ゴシック", YuGothic, "メイリオ", Meiryo, sans-serif;
   margin: 0 auto;
 }
 
+/* line 50, style.scss */
 header {
   height: 100%;
   color: white;
   clear: both;
   width: 1280px;
 }
+/* line 55, style.scss */
 header .bgl {
   height: 100%;
   background-color: #000;
   z-index: 2;
 }
 @media screen and (min-width: 1280px) {
+  /* line 55, style.scss */
   header .bgl {
     margin: 0 -100%;
     padding: 0 100%;
   }
 }
+/* line 65, style.scss */
+header img {
+  display: none;
+}
+/* line 68, style.scss */
 header video {
   opacity: 0.7;
   z-index: 1;
@@ -53,6 +65,7 @@ header video {
   transform: translateY(-50%);
 }
 @media screen and (min-width: 1280px) {
+  /* line 68, style.scss */
   header video {
     margin: 0 -100%;
     padding: 0 100%;
@@ -60,10 +73,12 @@ header video {
   }
 }
 @media screen and (max-width: 1279px) {
+  /* line 68, style.scss */
   header video {
     width: 1280px;
   }
 }
+/* line 83, style.scss */
 header nav {
   z-index: 5;
   position: absolute;
@@ -73,10 +88,12 @@ header nav {
   width: 1280px;
   height: 35px;
 }
+/* line 91, style.scss */
 header nav object {
   height: 100%;
   float: left;
 }
+/* line 95, style.scss */
 header nav ul {
   list-style-type: none;
   right: 20px;
@@ -84,6 +101,7 @@ header nav ul {
   height: 100%;
   float: right;
 }
+/* line 101, style.scss */
 header nav ul li {
   font-size: 20px;
   float: left;
@@ -91,9 +109,11 @@ header nav ul li {
   padding: 0 3px;
   transition: .1s;
 }
+/* line 107, style.scss */
 header nav ul li:hover {
   border-bottom: solid 1px #eee;
 }
+/* line 113, style.scss */
 header p {
   text-align: center;
   z-index: 5;
@@ -105,9 +125,11 @@ header p {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
+/* line 122, style.scss */
 header a {
   color: #fff;
 }
+/* line 125, style.scss */
 header #button {
   position: relative;
   position: relative;
@@ -124,11 +146,13 @@ header #button {
   opacity: 1;
   transition: .1s;
 }
+/* line 136, style.scss */
 header #button:hover {
   background: #fff;
   color: #555;
   opacity: 0.8;
 }
+/* line 142, style.scss */
 header #more {
   text-align: center;
   line-height: 75px;
@@ -136,6 +160,7 @@ header #more {
   font-family: 'Lato', sans-serif;
 }
 
+/* line 152, style.scss */
 #nav {
   display: none;
   z-index: 50;
@@ -146,10 +171,12 @@ header #more {
   border-bottom: 1px dotted #666;
   background-color: #fff;
 }
+/* line 161, style.scss */
 #nav .totop {
   height: 60px !important;
   width: 200px !important;
 }
+/* line 166, style.scss */
 #nav img {
   height: 35px;
   margin-top: 12.5;
@@ -157,6 +184,7 @@ header #more {
   position: relative;
   float: left;
 }
+/* line 173, style.scss */
 #nav p {
   position: relative;
   float: left;
@@ -166,12 +194,14 @@ header #more {
   color: #003D56;
   font-size: 18px;
 }
+/* line 182, style.scss */
 #nav ul {
   list-style-type: none;
   float: right;
   margin-right: 20px;
   margin-top: 15px;
 }
+/* line 188, style.scss */
 #nav ul li {
   font-size: 20px;
   float: left;
@@ -179,13 +209,16 @@ header #more {
   padding: 0 3px;
   transition: .1s;
 }
+/* line 194, style.scss */
 #nav ul li:hover {
   border-bottom: solid 1px #333;
 }
+/* line 199, style.scss */
 #nav a {
   color: #333;
 }
 @media screen and (min-width: 1280px) {
+  /* line 152, style.scss */
   #nav {
     width: 1280px;
     margin: 0 -100%;
@@ -194,10 +227,12 @@ header #more {
   }
 }
 
+/* line 209, style.scss */
 .d {
   display: block !important;
 }
 
+/* line 213, style.scss */
 #Works {
   /*Works*/
   text-align: left;
@@ -208,38 +243,46 @@ header #more {
   padding-bottom: 50px;
   background-color: #fff;
 }
+/* line 220, style.scss */
 #Works h1 {
   margin-top: 0;
 }
 @media screen and (min-width: 1280px) {
+  /* line 213, style.scss */
   #Works {
     padding: 110px 100% 100px 100%;
     margin: 0px -100% auto -100%;
   }
 }
+/* line 229, style.scss */
 #Works:after {
   content: "";
   clear: both;
   display: block;
 }
 
+/* line 236, style.scss */
 #a {
   /*About*/
   height: 500px;
 }
+/* line 238, style.scss */
 #a .left_c {
   float: left;
   text-align: left;
   width: 600px;
   margin-left: 20px;
 }
+/* line 243, style.scss */
 #a .left_c h3 {
   font-size: 36px;
   margin-bottom: 20px;
 }
+/* line 248, style.scss */
 #a .left_c #self_intro p {
   margin-top: 30px;
 }
+/* line 253, style.scss */
 #a .right_c {
   float: right;
   text-align: left;
@@ -247,23 +290,28 @@ header #more {
   margin-right: 20px;
   width: 600px;
 }
+/* line 259, style.scss */
 #a .right_c .english {
   font-size: 12px;
 }
+/* line 262, style.scss */
 #a .right_c .member {
   width: 120px;
   margin-bottom: 10px;
   float: left;
 }
 
+/* line 270, style.scss */
 #c {
   /*Contacts*/
 }
+/* line 271, style.scss */
 #c .mail {
   margin: 200px auto;
   font-size: 48px;
 }
 
+/* line 277, style.scss */
 .b {
   z-index: 2;
   color: #333333;
@@ -273,28 +321,17 @@ header #more {
   box-sizing: content-box;
   position: relative;
 }
+/* line 285, style.scss */
+.b .h {
+  font-weight: 800;
+}
+/* line 288, style.scss */
 .b h1 {
   margin: 50px auto;
   font-size: 48px;
   text-align: center;
 }
-.b .service {
-  text-align: center;
-  width: 290px;
-  float: left;
-  margin: 0 50px;
-}
-.b .service object {
-  width: 50%;
-  margin-bottom: 30px;
-}
-.b .service h3 {
-  font-weight: 200;
-}
-.b .service p {
-  font-size: 14px;
-  text-align: justify;
-}
+/* line 295, style.scss */
 .b .work {
   background-color: #000;
   margin: 0 10px;
@@ -305,6 +342,7 @@ header #more {
   overflow: hidden;
   z-index: 3;
 }
+/* line 305, style.scss */
 .b .work img {
   height: 288px;
   opacity: 1;
@@ -313,6 +351,7 @@ header #more {
   position: absolute;
   left: -56px;
 }
+/* line 313, style.scss */
 .b .work p {
   width: 100%;
   text-align: center;
@@ -325,18 +364,27 @@ header #more {
   opacity: 0;
   transition: 0.5s;
 }
+/* line 319, style.scss */
 .b .work p span {
   font-size: 25px;
 }
+/* line 328, style.scss */
+.b .work .bg {
+  display: none;
+}
+/* line 333, style.scss */
 .b .work:hover img {
   opacity: 0.5;
 }
+/* line 336, style.scss */
 .b .work:hover p {
   opacity: 1;
 }
+/* line 341, style.scss */
 .b .comming {
   background-color: #ddd;
 }
+/* line 343, style.scss */
 .b .comming img {
   opacity: 0.3;
   width: 398px;
@@ -348,6 +396,7 @@ header #more {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
+/* line 350, style.scss */
 .b .comming p {
   color: #000;
   opacity: 1;
@@ -356,6 +405,7 @@ header #more {
   font-size: 25px;
 }
 
+/* line 360, style.scss */
 .m_main {
   margin-top: 50px;
   margin-bottom: 10px;
@@ -363,14 +413,17 @@ header #more {
   margin-right: 20px;
   height: 380px;
 }
+/* line 366, style.scss */
 .m_main .video {
   width: 580px;
-  height: 327px;
+  height: auto;
   background-color: #DDD;
 }
+/* line 370, style.scss */
 .m_main .video video {
   width: 580px;
 }
+/* line 374, style.scss */
 .m_main .cs {
   position: relative;
   top: 50%;
@@ -379,29 +432,37 @@ header #more {
   transform: translateY(-50%);
   text-align: center;
 }
+/* line 378, style.scss */
 .m_main .info {
   width: 580px;
 }
+/* line 380, style.scss */
 .m_main .info .m_theme {
   font-size: 24px;
 }
 
+/* line 386, style.scss */
 .point {
   margin-bottom: 20px;
   margin-left: 20px;
   margin-right: 20px;
   height: 215px;
 }
+/* line 391, style.scss */
 .point .pic {
   width: 580px;
 }
+/* line 393, style.scss */
 .point .pic img {
   width: 285px;
+  overflow: hidden;
 }
+/* line 398, style.scss */
 .point .exp {
   width: 580px;
 }
 
+/* line 404, style.scss */
 .sep {
   clear: both;
   position: relative;
@@ -410,34 +471,41 @@ header #more {
   z-index: 40;
 }
 @media screen and (min-width: 1280px) {
+  /* line 404, style.scss */
   .sep {
     margin: 0 -500%;
     padding: 0 500%;
   }
 }
 
+/* line 416, style.scss */
 .hide {
   display: none;
 }
 
+/* line 420, style.scss */
 .l {
   float: left;
 }
 
+/* line 424, style.scss */
 .r {
   float: right;
 }
 
+/* line 428, style.scss */
 .blank60 {
   height: 60px;
 }
 
+/* line 432, style.scss */
 footer {
   z-index: 5;
   height: 100px;
   background-color: #333333;
   color: #EEEEEE;
 }
+/* line 435, style.scss */
 footer p {
   text-align: center;
   position: relative;
@@ -447,6 +515,7 @@ footer p {
   transform: translateY(-50%);
 }
 @media screen and (min-width: 1280px) {
+  /* line 432, style.scss */
   footer {
     margin: 0 -100%;
     padding: 0 100%;
