--- a/css/style.scss
+++ b/css/style.scss
@@ -62,6 +62,9 @@ header{
 		}
 		z-index: 2;
 	}
+	img{
+		display: none;
+	}
 	video{
 		opacity: 0.7;
 		z-index: 1;
@@ -279,32 +282,15 @@ header{
 	padding-top: 60px;
 	box-sizing: content-box;
 	position: relative;
-	
+	.h{
+		font-weight: 800;
+	}
 	h1{
 		margin: 50px auto;
 		font:{
 			size:48px;
 		}
 		text-align: center;
-	}
-	.service{
-		text-align: center;
-		width: 290px;
-		float: left;
-		margin: 0 50px;
-		object{
-			width: 50%;
-			margin-bottom: 30px;
-		}
-		h3{
-			font-weight: 200;
-		}
-		p{
-			font:{
-				size: 14px;
-			}
-			text-align: justify;
-		}
 	}
 	.work{
 
@@ -338,6 +324,9 @@ header{
 			margin-top: 104px;
 			opacity: 0;
 			transition: 0.5s;
+		}
+		.bg{
+			display: none;
 		}
 
 		&:hover{
@@ -376,7 +365,7 @@ header{
 	height: 380px;
 	.video{
 		width: 580px;
-		height: 327px;
+		height: auto;
 		background-color: #DDD;
 		video{
 			width: 580px;
@@ -403,7 +392,7 @@ header{
 		width: 580px;
 		img{
 			width: 285px;
-
+			overflow: hidden;
 		}
 	}
 	.exp{
