--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -45,6 +45,11 @@ $w: 90%;
 		}
 		p{
 			font-size: 32px;
+			padding-left: 16px;
+			@media screen and (max-width: 335px){
+				font-size: 24px;
+				padding-left: 12px;
+			}
 		}
 		#button{
 			display: none;
@@ -91,6 +96,12 @@ $w: 90%;
 			margin-right: auto;
 			margin-left: auto;
 			float: none;
+			.member{
+				width: 33%;
+				@media screen and (max-width: 380px){
+					width: 48%;
+				}
+			}
 		}
 	}
 	#c{
@@ -122,7 +133,7 @@ $w: 90%;
 				left: 0;
 			}
 			p{
-				margin-top: 30vw;
+				margin-top: 27vw;
 				display: block;
 				opacity: 1;
 			}
