--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -179,8 +179,10 @@ $w: 90%;
 		}
 		.video{
 			width: 100%;
-			video{
+			height: 56.25vw;
+			iframe{
 				width: 100%;
+				height: 100%;
 			}
 		}
 		.info{
