--- a/css/style.scss
+++ b/css/style.scss
@@ -367,8 +367,9 @@ header{
 		width: 580px;
 		height: auto;
 		background-color: #DDD;
-		video{
-			width: 580px;
+		iframe{
+			width: 100%;
+			height: 100%;
 		}
 	}
 	.cs{
