--- a/prototype/css/style.css
+++ b/prototype/css/style.css
@@ -43,6 +43,15 @@ video {
   box-shadow: 10px 0px 10px rgba(0, 0, 0, 0.1);
   padding: 10px;
 }
+#menu img {
+  position: relative;
+  top: 40%;
+  -webkit-transform: translateY(-40%);
+  -ms-transform: translateY(-40%);
+  transform: translateY(-40%);
+  left: 25px;
+  position: absolute;
+}
 #menu ul {
   position: relative;
   top: 40%;
@@ -122,13 +131,10 @@ video {
   color: #fff;
   opacity: 0.1;
   -webkit-transition: all 0.6s;
-  -moz-transition: all 0.6s;
-  -ms-transition: all 0.6s;
-  -o-transition: all 0.6s;
   transition: all 0.6s;
 }
 #overview:hover {
-  opacity: 0.3;
+  opacity: 0.5;
 }
 #overview h3 {
   border-bottom: 2px solid #fff;
@@ -144,5 +150,3 @@ video {
   margin-top: 8px;
   margin-bottom: 12px;
 }
-
-/*# sourceMappingURL=style.css.map */
